static text complited

--- a/demo-corporate-blog-single-clean.html
+++ b/demo-corporate-blog-single-clean.html
@@ -568,7 +568,7 @@
                     <!-- start footer column -->
                     <div
                         class="col-12 col-sm-5 col-lg-6 last-paragraph-no-margin text-xl-start text-lg-center lg-mb-50px sm-mb-30px">
-                        <a href="demo-corporate.html" class="footer-logo mb-15px d-inline-block"><img
+                        <a href="index.html" class="footer-logo mb-15px d-inline-block"><img
                                 src="images/demo-corporate-logo-black.png"
                                 data-at2x="images/demo-corporate-logo-black.png" alt=""></a>
                         <p class="lh-30 w-90 xl-w-100 mx-lg-auto mx-xl-0">
