--- a/demo-corporate-blog-single-clean.html
+++ b/demo-corporate-blog-single-clean.html
@@ -36,7 +36,7 @@
             <nav class="navbar navbar-expand-lg header-light bg-white disable-fixed">
                 <div class="container-fluid">
                     <div class="col-auto col-xl-3 col-lg-2 me-lg-0 me-auto">
-                        <a class="navbar-brand" href="demo-corporate.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="images/demo-corporate-logo-black.png"
                                 data-at2x="images/demo-corporate-logo-black.png" alt="" class="default-logo">
                             <img src="images/demo-corporate-logo-black.png"
@@ -56,7 +56,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a href="demo-corporate.html" class="nav-link">
+                                    <a href="index.html" class="nav-link">
                                         Главная
                                     </a>
                                 </li>
