add main slider images

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                      data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
                      data-param9="" data-param10="" data-description="">
                      <!-- slide's main background image -->
-                     <img src="https://via.placeholder.com/1920x1200" alt="Image" data-bgposition="center center"
+                     <img src="images/demo-corporate-main-slider-01.jpg" alt="Image" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                      <!-- start overlay layer -->
                      <div class="tp-caption tp-shape tp-shapewrapper " id="slide-1-layer-01"
@@ -317,7 +317,7 @@
                      data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
                      data-param9="" data-param10="" data-description="">
                      <!-- slide's main background image -->
-                     <img src="https://via.placeholder.com/1920x1200" alt="Image" data-bgposition="center center"
+                     <img src="images/demo-corporate-main-slider-02.jpg" alt="Image" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                      <!-- start overlay layer -->
                      <div class="tp-caption tp-shape tp-shapewrapper " id="slide-2-layer-01"
@@ -490,7 +490,7 @@
                      data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
                      data-param9="" data-param10="" data-description="">
                      <!-- slide's main background image -->
-                     <img src="https://via.placeholder.com/1920x1200" alt="Image" data-bgposition="center center"
+                     <img src="images/demo-corporate-main-slider-03.jpg" alt="Image" data-bgposition="center center"
                         data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                      <!-- start overlay layer -->
                      <div class="tp-caption tp-shape tp-shapewrapper " id="slide-3-layer-01"
